@@ -219,7 +219,8 @@ typedef enum
    | IPMICONSOLE_WORKAROUND_NO_CHECKSUM_CHECK               \
    | IPMICONSOLE_WORKAROUND_IGNORE_SOL_PAYLOAD_SIZE         \
    | IPMICONSOLE_WORKAROUND_IGNORE_SOL_PORT                 \
-   | IPMICONSOLE_WORKAROUND_SKIP_SOL_ACTIVATION_STATUS)
+   | IPMICONSOLE_WORKAROUND_SKIP_SOL_ACTIVATION_STATUS      \
+   | IPMICONSOLE_WORKAROUND_SKIP_CHANNEL_PAYLOAD_SUPPORT)
 
 #define IPMICONSOLE_ENGINE_MASK                    \
   (IPMICONSOLE_ENGINE_CLOSE_FD                     \
